--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
   "dependencies": {
     "axios": "^1.13.1",
     "date-fns": "^4.1.0",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.552.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-hot-toast": "^2.6.0",
+    "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.9.5"
   },
   "optionalDependencies": {
