--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "vite": "^7.1.7"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.95.3",
     "axios": "^1.13.1",
     "date-fns": "^4.1.0",
     "jszip": "^3.10.1",
